[package]
name = "sonomon"
version = "0.1.0"
authors = ["Sam Gillespie <samgwise@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }

rodio = "0.13"